# yandex-camp-bot

./: .env.template  .gitignore  AGENTS.md  README.md  pyproject.toml
.sourcecraft/: ci.yaml
app/: handlers.py  main.py
app/chains/: __init__.py  logging_middleware.py  main_pipeline.py  rag_pipeline.py  telegram_adapter.py
app/llms/: __init__.py  base.py  dialogue.py
app/rag/: README.md  __init__.py  rag_adapter.py  rag_config.py  rag_system.py  rag_utils.py
app/security/: heuristics.py  moderator.py
app/utils/: config.py  fs.py  log.py  rag.py
data/: telegram_bot_guide.txt
microservices/: .dockerignore  docker-compose.yml  env.example  run-services.sh  test-build.sh
microservices/api-gateway/: Dockerfile  README.md
microservices/common/: README.md  __init__.py
microservices/dialogue-service/: Dockerfile
microservices/monitoring-service/: Dockerfile  README.md
microservices/rag-service/: Dockerfile  README.md
microservices/security-service/: README.md
yandex-camp-bot/: README.md  docker-compose.yml
yandex-camp-bot/api-gateway/: Dockerfile  requirements.txt
yandex-camp-bot/common/: README.md  __init__.py  config.py
yandex-camp-bot/dashboard-service/: Dockerfile  requirements.txt
yandex-camp-bot/data/: ai_ml_concepts.txt  programming_basics.txt
yandex-camp-bot/dialogue-service/: Dockerfile  README.md  requirements.txt
yandex-camp-bot/monitoring-service/: Dockerfile  README.md  migrate_db.py  requirements.txt  run_dashboard.py
yandex-camp-bot/rag-service/: Dockerfile  requirements.txt
yandex-camp-bot/security-service/: Dockerfile  (+1 more)
(+59 files in other folders)
