[project]
name = "yandex-camp-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramil Gabdrakhmanov",email = "ramil2911912@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot (>=22.4,<23.0)",
    "openai (>=1.107.3,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
